--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <!-- User Profile -->
     <string name="user_profile_label">用户信息</string>
 
+    <!--Sign Up-->
+    <string name="sign_up_btn">注册</string>
+    <string name="forget_password">"忘记密码"</string>
+
 </resources>
