Opt OAuth of facebook, twitter and google plus

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="user_profile_label">用户信息</string>
 
     <!--Sign Up-->
-    <string name="sign_up_btn">注册</string>
+    <string name="sign_up_btn">注册/登录</string>
     <string name="forget_password">忘记密码?</string>
     <string name="sign_up_email_not_right">邮箱格式不正确</string>
     <string name="sign_up_password_can_not_null">密码不能为空</string>
