Opt Story music settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="story_settings_gesture_title">翻转手势</string>
     <string name="story_music_label">背景音乐</string>
     <string name="story_music_download_toast">正在下载音乐...</string>
+    <string name="story_music_download_error">音乐下载失败</string>
 </resources>
