--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Wisape</string>
+    <string name="app_none">无</string>
 
     <!--Login-->
     <string name="login_with_third">"Sign in with the follow apps"</string>
@@ -46,13 +47,13 @@
 
     <!-- Story-->
     <string name="story_settings_label">故事设置</string>
-    <string name="story_settings_primary_title">发布故事</string>
+    <string name="story_settings_primary_title">故事基本设置</string>
     <string name="story_settings_other_title">其他</string>
-    <string name="story_settings_name_hint">设置你的故事默认名字</string>
-    <string name="story_settings_desc_hint">设置你的故事默认描述</string>
+    <string name="story_settings_name_hint">故事默认名字</string>
+    <string name="story_settings_desc_hint">故事默认描述</string>
     <string name="story_settings_cover">故事默认封面</string>
-    <string name="story_settings_music_title">背景音乐</string>
-    <string name="story_settings_gesture_title">翻转手势</string>
+    <string name="story_settings_music_title">故事背景音乐</string>
+    <string name="story_settings_gesture_title">翻页手势</string>
     <string name="story_music_label">背景音乐</string>
     <string name="story_music_download_toast">正在下载音乐...</string>
     <string name="story_music_download_error">音乐下载失败</string>
