--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="about_privacy_policy">Privacy Policies</string>
     <string name="about_copyright">版权政策</string>
     <string name="about_rate">Rate for Wisape</string>
+    <string name="about_content">Content Specification</string>
     <string name="about_version_text">version:</string>
 
     <string name="crop_activity_label">图片剪切</string>
