--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="photo_bucket_all">全部照片</string>
     <string name="photo_bucket_list">相册列表</string>
     <string name="photo_to_buckets">切换到相册</string>
-    <string name="photo_menu_buckets">相切模式</string>
+    <string name="photo_menu_buckets">Travel</string>
 
     <!-- User Profile -->
     <string name="user_profile_label">User Profile</string>
