--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,8 +34,8 @@
     <string name="add_email">Email Accout</string>
 
     <!--Sign Up-->
-    <string name="sign_up_btn">Login in</string>
-    <string name="forget_password">Forget the password?</string>
+    <string name="sign_up_btn">Log in</string>
+    <string name="forget_password">Forgot the password?</string>
     <string name="sign_up_email_not_right">Email address is invalid</string>
     <string name="sign_up_password_can_not_null">Password not null</string>
     <string name="sign_up_password_error">Password in invalid</string>
@@ -127,6 +127,6 @@
 
     <string name="category_name_all">All</string>
 
-    <string name="user_register">sign up</string>
+    <string name="user_register"> sign up</string>
     <string name="user_create_account">Create Account</string>
 </resources>
